Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,11 +11,15 @@ pool:
 
 steps:
 
+- checkout: self
+
 - script: |
     echo "###################"
-    echo "# start testing..."
+    echo "# test equal-files-in-src-and-dst-must-success"
     echo "###################"
     echo ""
-    echo " + test equal-files-in-src-and-dst-must-success"
-    sh test/sh/equal-files-in-src-and-dst-must-success.sh
+    chmod +x ./sh/equal-files-in-src-and-dst-must-success.sh
+    ./sh/equal-files-in-src-and-dst-must-success.sh
   displayName: 'Run testing'
+  workingDirectory: 'test'
+
