test: setup testing on multiple platforms

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,18 @@
 
 trigger:
 - master
+- mac-compliance
+
+strategy:
+  matrix:
+    linux:
+      imageName: "ubuntu-16.04"
+    mac:
+      imageName: "macos-10.13"
+  maxParallel: 2
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: $(imageName)
 
 steps:
 
